# RustProjects

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  CodeOfConduct.md  LAST_COMMIT  LICENSE.md  Projects.py  README.md  Scratchpad.md  Scratchpad2-md  WORKSPACE.bazel  bazel-testlogs  build.rs  gnrt_config.toml  install-hooks.sh  pipeline.yaml
.github/workflows/: black.yml  ci.yml  ghpages.yml  openapi.yml
.gitlab/: ci.yml
bazel-out/: stable-status.txt  volatile-status.txt
src/: main.rs
